# DUMB

./: .gitmodules  CMakeLists.txt  README.md  dumb.cc  std.s
backend/: CMakeLists.txt
backend/include/: backend.hh  lir.hh
backend/sources/: backend.cc  lir.cc
common/: CMakeLists.txt
common/include/: ast.hh  ast_dump.hh  ir.hh  ir_dump.hh
common/sources/: ast_dump.cc  ir_dump.cc  utils.cc
frontend/: CMakeLists.txt
frontend/include/: ast.hh  emit_ir.hh  frontend.hh  lexer.hh  nametable.hh  syntax.hh
frontend/sources/: ast_dump.cc  emit_ir.cc  frontend.cc  lexer.cc  main.cc  syntax.cc
include/backend/: lir.hh
include/common/: ir.hh  utils.hh
include/frontend/: ast.hh  ast_dump.hh  lexer.hh  syntax.hh
sources/: dumb.cc
sources/backend/: backend.cc  lir.cc
sources/common/: ir_dump.cc
sources/frontend/: ast_dump.cc  emit_ir.cc  frontend.cc  lexer.cc  syntax.cc
